--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,14 +22,14 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v1
       with:
-        registry: https://icargoaz.azurecr.io/ ############################################
+        registry: https://icargoaz.azurecr.io/ 
         username: ${{ secrets.AzureAppService_ContainerUsername_7fe4218b75d44acd982fcba49ee541c7 }}
         password: ${{ secrets.AzureAppService_ContainerPassword_d7568033888947cf97273dac9a37d852 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v2
       with:
-        push: true             #############################
+        push: true            
         tags: icargoaz.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_7fe4218b75d44acd982fcba49ee541c7 }}/tudentperformance1:${{ github.sha }}
         file: ./Dockerfile
 
@@ -45,8 +45,8 @@ jobs:
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'icargoaz' ################################
+        app-name: 'icargoaz' 
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_1fbf117736ee417e9fb28f9f53c3edad }}
         images: 'icargoaz.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_7fe4218b75d44acd982fcba49ee541c7 }}/tudentperformance1:${{ github.sha }}'
-        ##############################
+        
